--- a/index.html
+++ b/index.html
@@ -16,6 +16,40 @@
 
 </head>
 <body>
+    <section class="nav-bar">
+        <nav>
+            <div class="nav-links">
+                <ul>
+                  <li><a class="logo" href="index.html">Ardex</a></li>
+                  <li><a href="HOME">home</a></li>
+                  <li><a href="ABOUT">about</a></li>
+                  <li><a href="COURSE">services</a></li>
+                  <li><a href="CONTACT">contact</a></li>
+                </ul>
+              </div>
+        </nav>
+    </section>
+
+    <section>
+        main body with background image
+    </section>
+
+    <section>
+        services with grid
+    </section>
+
+    <section>
+        call to action with buttons
+    </section>
+
+    <footer>
+        social media links
+    </footer>
+
+
+
+
+
 what is going on?
 
 </body>
