update styles to nav links

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 </head>
 <body>
-    <section class="nav-bar">
-        <nav>
+  
+    <section class="header">
+        <nav class="test">
+            <a href="index.html">Ardex</a>
+
             <div class="nav-links">
                 <ul>
-                  <li><a class="logo" href="index.html">Ardex</a></li>
                   <li><a href="HOME">home</a></li>
                   <li><a href="ABOUT">about</a></li>
                   <li><a href="COURSE">services</a></li>
@@ -29,8 +31,8 @@
               </div>
         </nav>
     </section>
-
-    <section>
+    
+    <section class="main-body">
         main body with background image
     </section>
 
@@ -45,12 +47,6 @@
     <footer>
         social media links
     </footer>
-
-
-
-
-
-what is going on?
 
 </body>
 </html>
