add header color and resize hero-image

--- a/index.html
+++ b/index.html
@@ -10,44 +10,44 @@
   <meta name="author" content="Golam Robbani">
   <title>Ardex Study Abroad Plan (ASAP)</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;500;700&display=swap');
-  </style>
-
 </head>
+
 <body>
-  
-    <section class="header">
-        <nav class="test">
-            <a href="index.html">Ardex</a>
 
-            <div class="nav-links">
-                <ul>
-                  <li><a href="HOME">home</a></li>
-                  <li><a href="ABOUT">about</a></li>
-                  <li><a href="COURSE">services</a></li>
-                  <li><a href="CONTACT">contact</a></li>
-                </ul>
-              </div>
-        </nav>
-    </section>
-    
-    <section class="main-body">
-        main body with background image
-    </section>
+  <header class="header">
+    <nav>
+      <a href="index.html"><img id="logo" src="assets/images/ardex_logo.png" alt="company logo"></a>
 
+      <div class="nav-links">
+        <ul>
+          <li><a href="HOME">home</a></li>
+          <li><a href="ABOUT">about</a></li>
+          <li><a href="SERVICES">services</a></li>
+          <li><a href="CONTACT">contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <!-- <section class="main-body">
+    <img src= "/assets/images/banner.png") alt="background photo of buildings with blue sky"> -->
     <section>
-        services with grid
-    </section>
+    <img src="/assets/images/banner.png" alt="background photo of buildings with blue sky">
+    <h1>main body with background image</h1>
+  </section>
 
-    <section>
-        call to action with buttons
-    </section>
+  <section>
+    <h1>services with grid</h1>
+  </section>
 
-    <footer>
-        social media links
-    </footer>
+  <section>
+    <h2>call to action with buttons</h2>
+  </section>
+
+  <footer>
+    <h1>social media links</h1>
+  </footer>
 
 </body>
-</html>
 
+</html>
