modify header menu

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav>
       <a href="index.html"><img id="logo" src="assets/images/ardex_logo.png" alt="company logo"></a>
 
-      <div class="nav-links">
-        <ul>
+      <div>
+        <ul id="nav-links">
           <li><a href="HOME">home</a></li>
           <li><a href="ABOUT">about</a></li>
           <li><a href="SERVICES">services</a></li>
