change hero image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- <section class="main-body">
     <img src= "/assets/images/banner.png") alt="background photo of buildings with blue sky"> -->
     <section>
-    <img src="/assets/images/banner.png" alt="background photo of buildings with blue sky">
+    <img src="/assets/images/takeoff.png" alt="background photo of buildings with blue sky">
     <h1>main body with background image</h1>
   </section>
 
