save the work because terminal is not working properly

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
 
-  <header class="header">
+  <header class="menu">
     <nav>
       <a href="index.html"><img id="logo" src="assets/images/ardex_logo.png" alt="company logo"></a>
 
-      <div>
-        <ul id="nav-links">
+      <div id="nav-links">
+        <ul>
           <li><a href="HOME">home</a></li>
           <li><a href="ABOUT">about</a></li>
           <li><a href="SERVICES">services</a></li>
@@ -32,7 +32,7 @@
   <!-- <section class="main-body">
     <img src= "/assets/images/banner.png") alt="background photo of buildings with blue sky"> -->
     <section>
-    <img src="/assets/images/takeoff.png" alt="background photo of buildings with blue sky">
+    <img class="hero-image" src="/assets/images/takeoff.png" alt="background photo of a aircraft with wide open sky">
     <h1>main body with background image</h1>
   </section>
 
